--- a/packages/nimble/src/Makevars.in
+++ b/packages/nimble/src/Makevars.in
@@ -1,6 +1,2 @@
-PKG_CPPFLAGS=-I../inst/include @EIGEN_INC@
+PKG_CPPFLAGS=-I../inst/include @EIGEN_INC@ -D_BUILDING_NIMBLE_PKG=1
 PKG_LIBS=@PKG_LIBS@ $(LAPACK_LIBS) $(BLAS_LIBS)
-
-
-
-
